annotate examples object routes
